--- a/all/templates/all/base.html
+++ b/all/templates/all/base.html
@@ -10,7 +10,8 @@
 
 <!--bootstrap-->
 <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css" rel="stylesheet">
-<script src="https://raw.github.com/twbs/bootstrap/master/dist/js/bootstrap.min.js"></script>
+<!--<script src="https://raw.github.com/twbs/bootstrap/master/dist/js/bootstrap.min.js"></script>-->
+<script src="{% static "bootstrap.js" %}"></script>
 
 <!--highcharts-->
 <script src="http://code.highcharts.com/highcharts.js"></script>
@@ -29,7 +30,8 @@
 <script src="{% static "jsmol_functions.js" %}"></script>
 
 <!--opentip-->
-<script src="https://raw.github.com/enyo/opentip/master/downloads/opentip-jquery-excanvas.min.js"></script>
+<!--<script src="https://raw.github.com/enyo/opentip/master/downloads/opentip-jquery-excanvas.min.js"></script>-->
+<script src="{% static "opentip.js" %}"></script>
 <link href="{% static "opentip.css" %}" rel="stylesheet">
 
 <!--tablesorter-->
