--- a/all/templates/all/refinement.html
+++ b/all/templates/all/refinement.html
@@ -8,7 +8,11 @@
 
 <div id="refinement_graph" style="width:100%; height:600px;"></div>
 
-<div id="slider"></div>
+<table>
+<tr><td>Slide to change the maximum value on the x axis:</td>
+<td style="width=200px; height=10px"></div></td></tr>
+</table>
+<div id="slider1" style="width=200px; height=10px"><br><br>
 
 <script>
 //change refinement graph when options are changed
@@ -83,17 +87,17 @@ $(function () {
 	}]
 	});
 
-	var gaugeChartObj = new Highcharts.Chart(refinement_graph);
+	//var gaugeChartObj = new Highcharts.Chart(refinement_graph);
 
-	$("#slider").slider({
+	$("#slider1").slider({
         value: 20,
-        range: "min",
+        //range: "min",
         min: 0,
         max: 50,
         animate: true,
-        slide: function (event, ui) {
-             gaugeChartObj.xAxis[0].max = ui.value;
-        }
+        /*slide: function (event, ui) {
+             Highcharts.Chart(refinement_graph).xAxis[0].max = ui.value;
+        }*/
         });
 });
 </script>
