speed issue and column selector

--- a/all/templates/all/base.html
+++ b/all/templates/all/base.html
@@ -39,9 +39,16 @@
 <script src="{% static "tablesorter/js/jquery.tablesorter.js" %}"></script>
 <script src="{% static "tablesorter/js/jquery.tablesorter.widgets.js" %}"></script>
 <script src="{% static "tablesorter/addons/pager/jquery.tablesorter.pager.js" %}"></script>
+<script src="{% static "tablesorter/js/widgets/widget-columnSelector.js" %}"></script>
+<script src="{% static "tablesorter/js/widgets/widget-cssStickyHeaders.js" %}"></script>
 
 <!--call tablesorter on .tablesorter tables-->
 <script src="{% static "tablesorter_function.js" %}"></script>
+
+<!--downloadify-->
+<script src="{% static "downloadify/src/downloadify.js" %}"></script>
+<script src="{% static "downloadify/js/swfobject.js" %}"></script>
+
 
 <!--script for target dropdown in navbar-->
 <script>
